# docs/swagger.json
@@ -74,29 +74,9 @@
                         }
                     }
                 }
-            },
-            "delete": {
-                "tags": [
-                    "Appointment Handlers"
-                ],
-                "summary": "Delete an appointment by a Doctor or Patient",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Apointment UUID",
-                        "name": "appointmentid",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Appointment deleted successfully"
-                    }
-                }
             }
         },
-        "/appointment/{patientid}": {
+        "/delete-all/{patientid}": {
             "delete": {
                 "tags": [
                     "Appointment Handlers"
@@ -114,6 +94,28 @@
                 "responses": {
                     "200": {
                         "description": "All appointments deleted successfully"
+                    }
+                }
+            }
+        },
+        "/delete/{appointmentid}": {
+            "delete": {
+                "tags": [
+                    "Appointment Handlers"
+                ],
+                "summary": "Delete an appointment by a Doctor or Patient",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Apointment UUID",
+                        "name": "appointmentid",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Appointment deleted successfully"
                     }
                 }
             }
@@ -275,9 +277,6 @@
                     "type": "string"
                 },
                 "password": {
-                    "type": "string"
-                },
-                "token": {
                     "type": "string"
                 }
             }
